# openapi.json
@@ -6,6 +6,57 @@
     "description": "Internal API of the Grünt website"
   },
   "paths": {
+    "/posts": {
+      "get": {
+        "summary": "Get Posts",
+        "description": "Retreive all the posts if you are allowed to",
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "properties": {
+                      "id": {
+                        "type": "string",
+                        "example": 2
+                      },
+                      "type": {
+                        "type": "string",
+                        "enum": [
+                          "vertical",
+                          "video",
+                          "photo"
+                        ],
+                        "example": "vertical"
+                      },
+                      "platforms": {
+                        "type": "array",
+                        "items": {
+                          "type": "string"
+                        },
+                        "example": [
+                          "youtube",
+                          "tikok",
+                          "instagram"
+                        ]
+                      },
+                      "mediaurl": {
+                        "type": "string",
+                        "example": "https://example.com/v/1d23e6z9"
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/users/login": {
       "post": {
         "summary": "Login",
